# 3rd-party-patent-genai-summarization

./: .gitignore  README.md  pyproject.toml  requirements.txt  summarize.py  summarized_output.xlsx  summarized_output_adn.xlsx  summarized_output_recycling.xlsx
data/raw_data/: 13 Nylon Polymer - CSV_2025-03-23.xlsx  Intermediates ADN Alert - NLP-ML Experiment Feed_2025-03-23.xlsx  Nylon Polymer Domain ML Feeds_032725.xlsx  Nylon Polymer Domain ML Feeds_032725_1.xlsx  Nylon Polymer Domain ML Feeds_032725_readable.xlsx
